# bmt-ai-os

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  VISION.md  conftest.py  docker-compose.dev.yml  mkdocs.yml  pyproject.toml
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
.scrum/: backlog.json  config.json  definition-of-done.md  epics.json  velocity.json
.scrum/burndowns/: sprint-2-burndown.json
.scrum/refinement/: 2026-04-09-refinement.md
.scrum/retrospectives/: sprint-1-retro.md  sprint-2-4-retro.md  sprint-5-6-final-retro.md
.scrum/reviews/: sprint-1-review.md
.scrum/sprints/: sprint-1.json  sprint-2.json  sprint-3.json  sprint-4.json  sprint-5.json  sprint-6.json  sprint-7.json
bmt-ai-os/: README.md  __init__.py
bmt-ai-os-build/: base-config.toml
bmt-ai-os-build/buildroot-external/: Config.in  external.desc  external.mk
bmt-ai-os-build/services/: ai-stack.yml
bmt-ai-os/ai-stack/: .env.example  docker-compose.llamacpp.yml  docker-compose.override.yml  docker-compose.yml
bmt-ai-os/controller/: __init__.py  api.py  config.py  controller.yml  health.py  main.py  middleware.py  openai_compat.py  provider_routes.py  rag_routes.py  requirements.txt
bmt-ai-os/kernel/: defconfig  linux.config  uboot.config
bmt-ai-os/providers/: __init__.py  anthropic_provider.py  base.py  config.py  gemini_provider.py  groq_provider.py  llamacpp.py  metrics.py  mistral_provider.py  ollama.py  openai_provider.py  providers.yml  registry.py  router.py  vllm.py
bmt-ai-os/rag/: __init__.py  chunker.py  config.py  embeddings.py  ingest.py  llm.py  prompts.py  query.py  requirements.txt  storage.py
bmt-ai-os/runtime/: fstab  partition-table.sh
bmt_ai_os/: README.md  SPECIFICATION.md  __init__.py  cli.py  logging.py  secret_files.py
bmt_ai_os/ai-stack/: docker-compose.vllm.yml  docker-compose.yml
bmt_ai_os/benchmark/: __init__.py  inference.py  rag.py  suite.py  system.py
bmt_ai_os/controller/: __init__.py  api.py  auth.py  auth_routes.py  config.py  controller.yml  conversation_routes.py  discovery.py  file_routes.py  git_routes.py  image_routes.py  main.py  metrics.py  middleware.py  openai_compat.py  persona_routes.py  plugin_routes.py  prometheus.py  provider_config_routes.py  provider_routes.py  rag_routes.py  rate_limit.py  ssh_key_routes.py  ssh_ws.py  terminal_ws.py  (+3 more)
docs/: README.md  index.md  releases-v2026.4.12.md
reports/: benchmark-qwen2.5-0.5b-20260411-104913.md  benchmark-qwen2.5-0.5b-20260411-104931.md  benchmark-qwen2.5-0.5b-20260411-105425.md  benchmark-qwen2.5-0.5b-20260411-140433.md  benchmark-qwen2.5-0.5b-20260411-140541.md  benchmark-qwen2.5-0.5b-20260411-140935.md  benchmark-qwen2.5-0.5b-20260411-141143.md  benchmark-qwen2.5-0.5b-20260411-141731.md  benchmark-qwen2.5-0.5b-20260411-142042.md  benchmark-qwen2.5-0.5b-20260411-164308.md  security-v2026.4.11-2026-04-11.md
scripts/: benchmark-inference.sh  boot-timing.sh  build.sh  ci-qemu-boot.sh  flash-pi5.sh  qemu-test.sh  security-report.sh
tests/: conftest.py  requirements.txt
(+408 files in other folders)
