[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bmt-ai-os"
version = "0.1.0"
description = "BMT AI OS — AI-first operating system for ARM64"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "aiohttp>=3.9",
    "docker>=7.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "aioresponses>=0.7",
]

[tool.setuptools.packages.find]
include = ["bmt_ai_os*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
per-file-ignores = {"tests/**" = ["E402"]}

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
