[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bmt_ai_os"
version = "2026.4.10"
description = "BMT AI OS — AI-first operating system for ARM64"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "aiohttp>=3.9",
    "bcrypt>=4.0",
    "click>=8.0",
    "cryptography>=43.0",
    "docker>=7.0",
    "fastapi>=0.115",
    "pydantic>=2.0",
    "pyjwt>=2.8",
    "pyyaml>=6.0",
    "requests>=2.31",
    "uvicorn>=0.34",
]

[project.scripts]
bmt-ai-os = "bmt_ai_os.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "aioresponses>=0.7",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bmt_ai_os*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
per-file-ignores = {"tests/**" = ["E402"]}

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "smoke: smoke tests",
    "integration: integration tests",
]
